force-app/main/default/objects/Category_Setting__mdt/fields/Field_Filter__c.field-meta.xml
<CustomField>
    <fullName>Field_Filter__c</fullName>
    <label>Field Filter</label>
    <type>TextArea</type>
</CustomField>