force-app/main/default/objects/Category_Setting__mdt/fields/FilterObject__c.field-meta.xml
<CustomField>
    <fullName>FilterObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FilterObject</label>
    <type>Checkbox</type>
</CustomField>