force-app/main/default/objects/Category_Setting__mdt/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <label>ReferenceId</label>
    <type>TextArea</type>
</CustomField>