force-app/main/default/objects/Category_Setting__mdt/fields/RepeatApi__c.field-meta.xml
<CustomField>
    <fullName>RepeatApi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RepeatApi</label>
    <type>Checkbox</type>
</CustomField>